<resources>
    <string name="app_name">Animalia</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome !"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_sign_in" translatable="false">SignInActivity</string>
    <string name="test">test</string>
    <string name="test2">test 2</string>
    <string name="Dog">Dog</string>
    <string name="Dog_text">The dog or domestic dog (Canis familiaris or Canis lupus familiaris) is a domesticated descendant of the wolf which is characterized by an upturning tail.    The dog derived from an ancient, extinct wolf,         and the modern grey wolf is the dog\'s nearest living relative.   The dog was the first species to be domesticated, by hunter–gatherers over 15,000 years ago, before the development of agriculture.         Due to their long association with humans, dogs have expanded to a large number of domestic individuals and gained the ability to thrive on a starch-rich diet that would be inadequate for other canids.            Over the millennia, dogs became uniquely adapted to human behavior, and the human-canine bond has been a topic of frequent study.         The dog has been selectively bred over millennia for various behaviors, sensory capabilities, and physical attributes.           Dog breeds vary widely in shape, size, and color. They perform many roles for humans, such as hunting, herding, pulling loads, protection, assisting police and the military, companionship, therapy, and aiding disabled people.            This influence on human society has given them the sobriquet of man\'s best friend.</string>
    <string name="share_additional">Share with us additional information!</string>
    <string name="write_comment">Comment...</string>
    <string name="send">Send</string>
    <string name="Gallery">Gallery</string>
    <string name="Information">Information</string>
    <string name="Login">Login</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Full_Name">Full Name</string>
    <string name="Login_btn">Login</string>
    <string name="Sign_Up_btn">Sign Up</string>
    <string name="Create_new_Account">Create new Account</string>
    <string name="Wrong_email_address">Wrong email address</string>
    <string name="Enter_Proper_Password">Enter Proper Password (at least 6 characters)</string>
    <string name="Please_Wait_While_Login...">Please Wait While Login...</string>
    <string name="Login_Successful">Login Successful</string>
    <string name="You_forgot_to_write_your_name">You forgot to write your name</string>
    <string name="Please_Wait_While_Registration...">Please Wait While Registration...</string>
    <string name="Registration">Registration</string>
    <string name="Registration_Successful">Registration Successful</string>
    <string name="Comment_is_empty...">Comment is empty...</string>
    <string name="Comment_Added">Comment Added</string>
    <string name="Lion">Lion</string>
    <string name="Lion_text">The lion (Panthera leo) is a large cat of the genus Panthera native to Africa and India. It has a muscular, deep-chested body, short, rounded head, round ears, and a hairy tuft at the end of its tail.\n\n It is sexually dimorphic, adult male lions are larger than females and have a prominent mane. It is a social species, forming groups called prides. A lion\'s pride consists of a few adult males, related females, and cubs. Groups of female lions usually hunt together, preying mostly on large ungulates. The lion is an apex and keystone predator, although some lions scavenge when opportunities occur and have been known to hunt humans, the species typically does not.\n\n The tail of all lions ends in a dark, hairy tuft that in some lions conceals an approximately 5 mm (0.20 in)-long, hard \"spine\" or \"spur\" that is formed from the final, fused sections of tail bone. The functions of the spur are unknown. The tuft is absent at birth and develops at around 5+1⁄2 months of age. It is readily identifiable by the age of seven months.\n\n Skeletal muscles of the lion make up 58.8% of its body weight and represents the highest percentage of muscles among mammals.</string>
    <string name="Horse">Horse</string>
    <string name="Horse_text">The horse (Equus ferus caballus) is a domesticated one-toed hoofed mammal. It belongs to the taxonomic family Equidae and is one of two extant subspecies of Equus ferus.\n\n Horses are adapted to run, allowing them to quickly escape predators, possessing an excellent sense of balance and a strong fight-or-flight response. Related to this need to flee from predators in the wild is an unusual trait: horses are able to sleep both standing up and lying down, with younger horses tending to sleep significantly more than adults.\n\n Female horses, called mares, carry their young for approximately 11 months, and a young horse, called a foal, can stand and run shortly following birth. Most domesticated horses begin training under a saddle or in a harness between the ages of two and four. They reach full adult development by age five, and have an average lifespan of between 25 and 30 years.\n\n Horse breeds are loosely divided into three categories based on general temperament: spirited \"hot bloods\" with speed and endurance; \"cold bloods\", such as draft horses and some ponies, suitable for slow, heavy work; and \"warmbloods\", developed from crosses between hot bloods and cold bloods, often focusing on creating breeds for specific riding purposes, particularly in Europe. There are more than 300 breeds of horse in the world today, developed for many different uses.</string>
    <string name="Giraffe">Giraffe</string>
    <string name="Giraffe_text">The giraffe is a tall African mammal belonging to the genus Giraffa. Specifically, It is an even-toed ungulate. It is the tallest living terrestrial animal and the largest ruminant on Earth. Traditionally, giraffes were thought to be one species, Giraffa camelopardalis, with nine subspecies. Most recently, researchers proposed dividing giraffes into up to eight extant species due to new research into their mitochondrial and nuclear DNA, as well as morphological measurements. Seven other extinct species of Giraffa are known from the fossil record.\n\n The giraffe\'s chief distinguishing characteristics are its extremely long neck and legs, its horn-like ossicones, and its spotted coat patterns. It is classified under the family Giraffidae, along with its closest extant relative, the okapi. Its scattered range extends from Chad in the north to South Africa in the south, and from Niger in the west to Somalia in the east. Giraffes usually inhabit savannahs and woodlands. Their food source is leaves, fruits, and flowers of woody plants, primarily acacia species, which they browse at heights most other herbivores cannot reach.\n\n Fully grown giraffes stand 4.3–5.7 m (14.1–18.7 ft) tall, with males taller than females. The average weight is 1,192 kg (2,628 lb) for an adult male and 828 kg (1,825 lb) for an adult female. Despite its long neck and legs, the giraffe\'s body is relatively short.  The skin of a giraffe is mostly gray, or tan, and can reach a thickness of 20 mm (0.79 in The 80–100 centimetres (31–39 in) long tail ends in a long, dark tuft of hair and is used as a defense against insects.</string>
    <string name="Crocodile">Crocodile</string>
    <string name="Crocodile_text">Crocodiles (family Crocodylidae) or true crocodiles are large semiaquatic reptiles that live throughout the tropics in Africa, Asia, the Americas and Australia.\n\n  A crocodile\'s physical traits allow it to be a successful predator. Its external morphology is a sign of its aquatic and predatory lifestyle. Its streamlined body enables it to swim swiftly, it also tucks its feet to the side while swimming, making it faster by decreasing water resistance. Crocodiles have webbed feet which, though not used to propel them through the water, allow them to make fast turns and sudden moves in the water or initiate swimming.\n\n   Webbed feet are an advantage in shallow water, where the animals sometimes move around by walking. Crocodiles have a palatal flap, a rigid tissue at the back of the mouth that blocks the entry of water. The palate has a special path from the nostril to the glottis that bypasses the mouth. The nostrils are closed during submergence.\n\n  Size greatly varies among species, from the dwarf crocodile to the saltwater crocodile. Species of the dwarf crocodile Osteolaemus grow to an adult size of just 1.5 to 1.9 m (4.9 to 6.2 ft), whereas the saltwater crocodile can grow to sizes over 7 m (23 ft) and weigh over 1,000 kg (2,200 lb). Several other large species can reach over 5.2 m (17 ft) long and weigh over 900 kg (2,000 lb).\n\n  Crocodilians show pronounced sexual dimorphism, with males growing much larger and more rapidly than females. Despite their large adult sizes, crocodiles start their lives at around 20 cm (7.9 in) long. The largest species of crocodile is the saltwater crocodile, found in eastern India, northern Australia, throughout South-east Asia, and in the surrounding waters.</string>
    <string name="Deer">Deer</string>
</resources>