<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="30dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EB322817" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-142dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tv_sign_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/noto_sans"
                android:text="@string/Login"
                android:textColor="#DFCAB1"
                android:textSize="44sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_logo"
                tools:ignore="MissingConstraints" />



            <EditText
                android:id="@+id/email_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/input"
                android:drawableStart="@drawable/ic_baseline_alternate_email_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fitsSystemWindows="false"
                android:fontFamily="@font/noto_sans"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="#DFCAB1"
                android:textColorHint="#DFCAB1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sign_title" />

            <EditText
                android:id="@+id/pass_word"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/input"
                android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/noto_sans"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:textAlignment="viewStart"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="#DFCAB1"
                android:textColorHint="#DFCAB1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/email_address"
                app:layout_constraintTop_toBottomOf="@+id/email_address" />

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="106dp"
                android:layout_height="53dp"
                android:layout_marginTop="52dp"
                android:background="@drawable/input"
                android:fontFamily="@font/noto_sans"
                android:text="@string/Login_btn"
                android:textAllCaps="false"
                android:textColor="#DFCAB1"
                android:textColorHint="#DFCAB1"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/tv_sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pass_word"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="128dp"
                android:fontFamily="@font/noto_sans"
                android:text="@string/Create_new_Account"
                android:textColor="#DFCAB1"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/sign_in_logo"
                android:layout_width="398dp"
                android:layout_height="128dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.461"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.026"
                app:srcCompat="@drawable/logo1" />




        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
