<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hapticFeedbackEnabled="false" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EB322817"
        android:fillViewport="true"

        android:focusableInTouchMode="false"
        tools:layout_editor_absoluteX="-163dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="160dp"
                android:fontFamily="@font/noto_sans"
                android:text="@string/Sign_Up"
                android:textColor="#DFCAB1"
                android:textSize="44sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/enter_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/input"
                android:drawableStart="@drawable/ic_baseline_alternate_email_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/noto_sans"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="#DFCAB1"
                android:textColorHint="#DFCAB1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/enter_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/input"
                android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/noto_sans"
                android:hint="@string/Password"
                android:textAlignment="viewStart"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="#DFCAB1"
                android:textColorHint="#DFCAB1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/enter_email"
                app:layout_constraintTop_toBottomOf="@+id/enter_email" />

            <EditText
                android:id="@+id/full_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/input"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/noto_sans"
                android:hint="@string/Full_Name"
                android:textAlignment="viewStart"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:paddingTop="13dp"
                android:paddingRight="20dp"
                android:paddingBottom="13dp"
                android:textColor="#DFCAB1"
                android:textColorHint="#DFCAB1"
                app:layout_constraintEnd_toEndOf="@+id/enter_password"
                app:layout_constraintStart_toStartOf="@+id/enter_password"
                app:layout_constraintTop_toBottomOf="@+id/enter_password" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="106dp"
                android:layout_height="53dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/input"
                android:fontFamily="@font/noto_sans"
                android:text="@string/Sign_Up_btn"
                android:textAllCaps="false"
                android:textColor="#DFCAB1"
                android:textColorHint="#DFCAB1"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/full_name"
                app:layout_constraintStart_toStartOf="@+id/full_name"
                app:layout_constraintTop_toBottomOf="@+id/full_name"
                app:layout_constraintVertical_bias="0.155" />

            <ImageView
                android:id="@+id/sign_in_logo"
                android:layout_width="398dp"
                android:layout_height="128dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.461"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.026"
                app:srcCompat="@drawable/logo1" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
