<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/horseLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EB322817" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="30dp">


            <ImageView
                android:id="@+id/horse_image_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@color/purple_200"
                android:backgroundTint="@color/purple_200"
                android:baselineAlignBottom="false"
                android:padding="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/horse1" />

            <TextView
                android:id="@+id/horse_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/noto_sans"
                android:includeFontPadding="true"
                android:outlineProvider="none"
                android:shadowColor="@color/purple_500"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"
                android:text="@string/Horse"
                android:textColor="@color/purple_200"
                android:textSize="80sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horse_image_title" />

            <TextView
                android:id="@+id/horse_gallery_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/noto_sans"
                android:text="@string/Gallery"
                android:textColor="#DFCAB1"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horse_desc" />

            <HorizontalScrollView
                android:id="@+id/horse_gallery"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horse_gallery_title">

                <TableRow
                    android:layout_width="150dp"
                    android:layout_height="150dp">

                    <ImageView
                        android:id="@+id/horse_image_1"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/input"
                        android:padding="2dp"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/horse2" />

                    <ImageView
                        android:id="@+id/horse_image_2"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/input"
                        android:contextClickable="false"
                        android:padding="2dp"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/horse3" />

                    <ImageView
                        android:id="@+id/horse_image_3"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/input"
                        android:contextClickable="false"
                        android:padding="2dp"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/horse4" />

                    <ImageView
                        android:id="@+id/horse_image_4"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/input"
                        android:contextClickable="false"
                        android:padding="2dp"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/horse5" />

                    <ImageView
                        android:id="@+id/horse_image_5"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/input"
                        android:contextClickable="false"
                        android:padding="2dp"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/horse6" />

                    <ImageView
                        android:id="@+id/horse_image_6"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/input"
                        android:contextClickable="false"
                        android:padding="2dp"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/horse7" />
                </TableRow>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/horse_desc"
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/noto_sans"
                android:gravity="center"
                android:text="@string/Horse_text"
                android:textColor="#DFCAB1"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horse_title" />


            <EditText
                android:id="@+id/horse_comment"
                android:layout_width="302dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/input"
                android:fontFamily="@font/noto_sans"
                android:gravity="center"
                android:hint="@string/write_comment"
                android:textColor="#DFCAB1"
                android:textColorHint="#DFCAB1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horse_share_title"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/horse_send_btn"
                android:layout_width="62dp"
                android:layout_height="37dp"
                android:layout_marginStart="-5dp"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="-2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/horse_comment"
                app:layout_constraintTop_toBottomOf="@+id/horse_share_title"
                app:srcCompat="@drawable/send_btn" />

            <TextView
                android:id="@+id/horse_share_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/noto_sans"
                android:text="@string/share_additional"
                android:textColor="#DFCAB1"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horse_gallery" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/horse_comments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horse_comment" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>